--- a/app/components/booking/proposal/proposal.component.html
+++ b/app/components/booking/proposal/proposal.component.html
@@ -5,22 +5,6 @@
                 <div class="proposal-line">Booking details</div>
             </div>
         </div>
-        <div *ngIf="(!data.Enquiry.Proposal || !data.Enquiry.Proposal.SubmittedAt) && !data.Enquiry.CancelledAt && !data.Enquiry.DeclinedAt" class="row">
-            <div class="col-xs-12 text-center">
-                <p>There’s no proposal created by manager of this property.</p>
-                <p>Please wait for proposal</p>
-            </div>
-        </div>
-        <div *ngIf="data.Enquiry.DeclinedAt" class="row">
-            <div class="col-xs-12 text-center">
-                <p>Enquiry was decline</p>
-            </div>
-        </div>
-        <div *ngIf="data.Enquiry.CancelledAt" class="row">
-            <div class="col-xs-12 text-center">
-                <p>Enquiry was cancelled</p>
-            </div>
-        </div>
         <div *ngIf="data.Enquiry.Proposal && data.Enquiry.Proposal.SubmittedAt && !data.Enquiry.CancelledAt && !data.Enquiry.DeclinedAt">
             <div class="row">
                 <div class="col-xs-6">
@@ -84,7 +68,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" *ngIf="!loginService.getRoles('Agent')">
                 <div class="col-xs-12 p-l-r-30">
                     <div class="divider"></div>
                     <div class="terms p-l-r-10">
@@ -112,329 +96,4 @@
             </div>
         </div>
     </div>
-    <div class="enquiry-footer p-l-r-30">
-        <!--no proposal agent buttons-->
-        <div *ngIf="(!data.Enquiry.Proposal || !data.Enquiry.Proposal.SubmittedAt) && !data.Enquiry.CancelledAt && !data.Enquiry.DeclinedAt" class="row">
-            <div class="col-xs-6">
-                <button type="button" class="btn btn-danger font-16 m-l-10" (click)="cancelProposal()">Cancel</button>
-            </div>
-        </div>
-        <!--no proposal agent buttons end-->
-        <!--proposal agent buttons-->
-        <div *ngIf="data.Enquiry.Proposal && data.Enquiry.Proposal.SubmittedAt && !data.Enquiry.Proposal.AcceptedAt && !data.Enquiry.DeclinedAt && !data.Enquiry.CancelledAt" class="row">
-            <div class="col-xs-6">
-                <button type="button" class="btn btn-danger font-16 m-l-10" (click)="cancelProposal()">Cancel</button>
-            </div>
-            <div class="col-xs-6">
-                <button type="submit" class="btn btn-success pull-right font-16 m-r-10" (click)="acceptProposal()">Accept</button>
-            </div>
-        </div>
-        <!--proposal agent buttons end-->
-    </div>
 </div>
-
-
-<div [formGroup]="proposalManagerForm" *ngIf="loginService.getRoles('Manager1')">
-    <div class="enquiry-body">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="proposal-line">Booking details</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 text-center">
-                <p>You have no proposal created for this Enquiry yet</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 text-center">
-                <p>Enquiry was decline</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 text-center">
-                <p>Enquiry was cancelled</p>
-            </div>
-        </div>
-        <div >
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="input-group p-l-5">
-                        <span class="input-group-addon"><i class="material-icons">person</i></span>
-                        <input-field-cmp [data]="{title: 'Customer Name', type: 'text'}"
-                                         [field]="proposalManagerForm.controls.CustomerName"></input-field-cmp>
-                    </div>
-                </div>
-                <div class="col-xs-6">
-                    <div class="input-group p-r-30">
-                        <span class="input-group-addon"><i class="material-icons">location_city</i></span>
-                        <input-field-cmp [data]="{title: 'Property', type: 'text'}"
-                                         [field]="proposalManagerForm.controls.PropertyName"></input-field-cmp>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6 normalize-datetitme">
-                    <datetimepicker-field-cmp [data]="{title: 'Check In'}"
-                                              [classes]="{withIcon: true}"
-                                              [field]="proposalManagerForm.controls.CheckIn"></datetimepicker-field-cmp>
-                </div>
-                <div class="col-xs-6 normalize-datetitme">
-                    <div class="p-r-15">
-                        <datetimepicker-field-cmp [data]="{title: 'Check Out'}"
-                                                  [classes]="{withIcon: true}"
-                                                  [field]="proposalManagerForm.controls.CheckOut"></datetimepicker-field-cmp>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="form-inline rental-price p-l-5">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
-                            <input-field-cmp [data]="{title: 'Rental Price', type: 'text'}"
-                                             [field]="proposalManagerForm.controls.RentalCost"></input-field-cmp>
-                        </div>
-                        <div class="input-group fees">
-                            <span>+ fees </span><i class="material-icons">euro_symbol</i> {{proposalManagerForm.controls.Fees.value}}
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6">
-                    <div class="input-group booking-price p-r-30">
-                        <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
-                        <div class="form-group label-floating">
-                            <label class="control-label">Booking price</label>
-                            <span class="form-control-static text-left">
-                            {{proposalManagerForm.controls.RentalCost.value + proposalManagerForm.controls.Fees.value}}
-                        </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6 col-md-12 col-lg-6">
-                    <div class="input-group p-l-5">
-                        <span class="input-group-addon"><i class="material-icons">description</i></span>
-                        <div class="form-group label-floating select-component always-visible">
-                            <singleselect-field-cmp *ngIf="proposalManagerForm.controls.DefaultTerms.value"
-                                                    [dataList]="[proposalManagerForm.controls.DefaultTerms.value]"
-                                                    [options]="{title: 'Terms & Conditions Contract', default: 'Default Contract'}"
-                                                    [field]="proposalManagerForm.controls.DefaultTerms"></singleselect-field-cmp>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-md-12 col-lg-6">
-                    <div class="input-group p-r-30">
-                        <span class="input-group-addon"><i class="material-icons">description</i></span>
-                        <div class="form-group label-floating select-component always-visible">
-                            <label class="control-label">Cancellation Policy Contract</label>
-                            <singleselect-field-cmp *ngIf="proposalManagerForm.controls.CancellationPolicy.value"
-                                                    [dataList]="[proposalManagerForm.controls.CancellationPolicy.value]"
-                                                    [options]="{title: 'Cancellation Policy Contract', default: 'Default Contract'}"
-                                                    [field]="proposalManagerForm.controls.CancellationPolicy"></singleselect-field-cmp>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 p-l-r-30">
-                    <div class="divider"></div>
-                    <div formArrayName="TermsList" class="terms p-l-r-10">
-                        <h5>Terms</h5>
-                        <div class="terms-wrp" *ngFor="let term of proposalManagerForm.controls['TermsList'].value; let i = index">
-                            <div class="form-group m-none">
-                                <input type="text" class="form-control" [formControlName]="i">
-                            </div>
-                            <button class="btn btn-just-icon btn-simple btn-remove" title="Remove" type="button" (click)="removeTerm()">
-                                <i class="material-icons">clear</i>
-                            </button>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <button type="button"
-                                        class="btn btn-default btn-simple btn-back btn-success pull-right"
-                                        (click)="addTerm()">+ Add</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 p-l-r-30">
-                    <div class="divider"></div>
-                    <div class="payment-terms p-l-r-10">
-                        <h5>Payment Terms</h5>
-                        <ul>
-                            <li>
-                                <div class="form-group m-none">
-                                    <input type="text" class="form-control" [formControl]="proposalManagerForm.controls.DepositPercentage">
-                                </div>
-                                <span>% payable upfront</span></li>
-                            <li>
-                                <div class="form-group m-none">
-                                    <input type="text" class="form-control" [formControl]="proposalManagerForm.controls.BalancePercentage">
-                                </div>
-                                <span>% payable</span>
-                                <div class="form-group m-none">
-                                    <input type="text" class="form-control" [formControl]="proposalManagerForm.controls.BalanceDaysBeforeCheckIn">
-                                </div>
-                                <span>weeks before check in</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="enquiry-footer p-l-r-30">
-        <!--no proposal manager buttons-->
-        <div *ngIf="!data.Enquiry.Proposal && !data.Enquiry.DeclinedAt && !data.Enquiry.CancelledAt" class="row">
-            <div class="col-xs-6">
-                <button type="button" class="btn btn-danger font-16 m-l-10" (click)="declineProposal()">Decline</button>
-            </div>
-            <div class="col-xs-6">
-                <button type="button" class="btn btn-success pull-right font-16 m-r-10" (click)="createProposal()">Create Proposal</button>
-            </div>
-        </div>
-        <!--no proposal manager buttons end-->
-        <!--proposal manager buttons-->
-        <div *ngIf="data.Enquiry.Proposal && !data.Enquiry.DeclinedAt && !data.Enquiry.CancelledAt" class="row">
-            <div class="col-xs-4">
-                <button type="button" class="btn btn-danger font-16 m-l-10" (click)="declineProposal()">Decline</button>
-            </div>
-            <div class="col-xs-8">
-                <button type="button" class="btn btn-success-green pull-right font-16 m-r-10" [disabled]="data.Enquiry.Proposal.SubmittedAt" (click)="submitProposal()">Submit</button>
-                <button type="button" class="btn btn-success pull-right font-16 m-r-10 p-l-r-20" (click)="saveProposal()">Save</button>
-            </div>
-        </div>
-        <!--proposal manager buttons end-->
-    </div>
-</div>
-
-<div [formGroup]="proposalManagerForm" >
-    <div class="enquiry-body">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="proposal-line">Booking details</div>
-            </div>
-        </div>
-        <div *ngIf="(!data.Enquiry.Proposal || !data.Enquiry.Proposal.SubmittedAt) && !data.Enquiry.CancelledAt && !data.Enquiry.DeclinedAt" class="row">
-            <div class="col-xs-12 text-center">
-                <p>There’s no proposal created by manager of this property.</p>
-                <p>Please wait for proposal</p>
-            </div>
-        </div>
-        <div *ngIf="data.Enquiry.DeclinedAt" class="row">
-            <div class="col-xs-12 text-center">
-                <p>Enquiry was decline</p>
-            </div>
-        </div>
-        <div *ngIf="data.Enquiry.CancelledAt" class="row">
-            <div class="col-xs-12 text-center">
-                <p>Enquiry was cancelled</p>
-            </div>
-        </div>
-        <div >
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="input-group p-l-5">
-                        <span class="input-group-addon"><i class="material-icons">person</i></span>
-                        <input-field-cmp [data]="{title: 'Customer Name', type: 'text'}"
-                                         [field]="proposalManagerForm.controls.CustomerName"></input-field-cmp>
-                    </div>
-                </div>
-                <div class="col-xs-6">
-                    <div class="input-group p-r-30">
-                        <span class="input-group-addon"><i class="material-icons">location_city</i></span>
-                        <input-field-cmp [data]="{title: 'Property', type: 'text'}"
-                                         [field]="proposalManagerForm.controls.PropertyName"></input-field-cmp>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="input-group p-l-5">
-                        <span class="input-group-addon"><i class="material-icons">insert_invitation</i></span>
-                        <input-field-cmp [data]="{title: 'Check In', type: 'text'}"
-                                         [field]="proposalManagerForm.controls.CheckIn"></input-field-cmp>
-                    </div>
-                </div>
-                <div class="col-xs-6">
-                    <div class="input-group p-r-30">
-                        <span class="input-group-addon"><i class="material-icons">insert_invitation</i></span>
-                        <input-field-cmp [data]="{title: 'CheckOut', type: 'text'}"
-                                         [field]="proposalManagerForm.controls.CheckOut"></input-field-cmp>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="input-group p-l-5 p-r-15">
-                        <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
-                        <input-field-cmp [data]="{title: 'Rental Price', type: 'text'}"
-                                         [field]="proposalManagerForm.controls.RentalCost"></input-field-cmp>
-                    </div>
-                </div>
-            </div>
-            <!--agent contracts-->
-            <div class="row">
-                <div class="col-xs-6 col-md-12 col-lg-6">
-                    <div class="input-group p-l-5">
-                        <span class="input-group-addon"><i class="material-icons">description</i></span>
-                        <div class="form-group label-floating">
-                            <label class="control-label">Terms & Conditions Contract</label>
-                            <span class="form-control-static"><a href="#">{{proposalManagerForm.controls.DefaultTerms.value.Name}}</a></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-md-12 col-lg-6">
-                    <div class="input-group p-r-30">
-                        <span class="input-group-addon"><i class="material-icons">description</i></span>
-                        <div class="form-group label-floating">
-                            <label class="control-label">Cancellation Policy Contract</label>
-                            <span class="form-control-static"><a href="#">{{proposalManagerForm.controls.CancellationPolicy.value.Name}}</a></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 p-l-r-30">
-                    <div class="divider"></div>
-                    <div class="terms p-l-r-10">
-                        <h5>Terms</h5>
-                        <ol class="m-b-none">
-                            <li *ngFor="let term of proposalManagerForm.controls.TermsList.value">{{term}}</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 p-l-r-30">
-                    <div class="divider"></div>
-                    <div class="terms p-l-r-10">
-                        <h5>Payment Terms</h5>
-                        <ul>
-                            <li><strong>{{proposalManagerForm.controls['DepositPercentage'].value}}%</strong> payable upfront</li>
-                            <li>
-                                <strong>{{proposalManagerForm.controls['BalancePercentage'].value}}%</strong> payable
-                                <strong>{{proposalManagerForm.controls['BalanceDaysBeforeCheckIn'].value}}</strong> weeks before check in
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="enquiry-footer p-l-r-30">
-        <div class="row">
-            <div class="col-xs-6">
-                <button type="button" class="btn btn-danger font-16 m-l-10" (click)="cancelProposal()">Cancel booking</button>
-            </div>
-            <div class="col-xs-6">
-                <button type="submit" class="btn btn-success pull-right font-16 m-r-10" (click)="acceptProposal()">Save</button>
-            </div>
-        </div>
-    </div>
-</div>
-
