--- a/app/pages/booking/booking-id/booking-id.component.html
+++ b/app/pages/booking/booking-id/booking-id.component.html
@@ -8,13 +8,13 @@
                             <div class="col-xs-10">
                                 <ul id="myTabs" class="nav nav-tabs" data-tabs="tabs">
                                     <li class="active">
-                                        <a href="#forthcoming" data-toggle="tab">Forthcoming</a>
+                                        <a [routerLink]="['/forthcoming']" data-toggle="tab">Forthcoming</a>
                                     </li>
                                     <li class="">
-                                        <a href="#current" data-toggle="tab">Current</a>
+                                        <a [routerLink]="['/current']" data-toggle="tab">Current</a>
                                     </li>
                                     <li class="">
-                                        <a href="#past" data-toggle="tab">Past</a>
+                                        <a [routerLink]="['/past']" data-toggle="tab">Past</a>
                                     </li>
                                 </ul>
                             </div>
@@ -41,6 +41,16 @@
                                 </div>
                                 <div class="col-md-6">
                                     <proposal-cmp *ngIf="enquiryService.enquiry" [data]="enquiryService.enquiry"></proposal-cmp>
+                                    <div class="enquiry-footer p-l-r-30">
+                                        <div class="row">
+                                            <div class="col-xs-6">
+                                                <button type="button" class="btn btn-danger font-16 m-l-10" (click)="cancelBooking()">Cancel booking</button>
+                                            </div>
+                                            <div class="col-xs-6" *ngIf="!loginService.getRoles('Agent')">
+                                                <button type="submit" class="btn btn-success pull-right font-16 m-r-10" (click)="saveBooking()">Save</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -57,7 +67,7 @@
         </div>
     </div>
 </div>
-<div class="loader" [hidden]="true">
+<div class="loader" [hidden]="bookingService.booking && enquiryService.enquiry">
     <svg class="circular" viewBox="25 25 50 50">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
     </svg>
