--- a/app/components/booking/property-info/property-info.component.html
+++ b/app/components/booking/property-info/property-info.component.html
@@ -53,22 +53,19 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" [formGroup]="bookingForm">
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="material-icons">mail</i></span>
-                    <div class="form-group label-floating">
-                        <label class="control-label">Email</label>
-                        <input type="text"
-                               class="form-control"
-                               value="maryjohnson120@mail.com">
-                    </div>
+                    <input-field-cmp [data]="{title: 'Email', name: 'Email', type: 'text'}"
+                                     [errorForm]="errorForm"
+                                     [field]="bookingForm.controls.ClientContactEmail"></input-field-cmp>
                 </div>
                 <div class="input-group">
                     <span class="input-group-addon"><i class="material-icons">assignment</i></span>
                     <div class="form-group label-floating">
                         <label class="control-label">Notes</label>
-                        <textarea type="text"
+                        <textarea [formControl]="bookingForm.controls.Notes"
                                   class="form-control"
                                   (keyup)="autosize($event)"
                                   (click)="autosize($event)"
