--- a/app/pages/booking/booking-id/booking-id.component.html
+++ b/app/pages/booking/booking-id/booking-id.component.html
@@ -8,13 +8,13 @@
                             <div class="col-xs-10">
                                 <ul id="myTabs" class="nav nav-tabs" data-tabs="tabs">
                                     <li class="active">
-                                        <a [routerLink]="['/forthcoming']" data-toggle="tab">Forthcoming</a>
+                                        <a [routerLink]="['/booking']" data-toggle="tab">Forthcoming</a>
                                     </li>
                                     <li class="">
-                                        <a [routerLink]="['/current']" data-toggle="tab">Current</a>
+                                        <a [routerLink]="['/booking/current']" data-toggle="tab">Current</a>
                                     </li>
                                     <li class="">
-                                        <a [routerLink]="['/past']" data-toggle="tab">Past</a>
+                                        <a [routerLink]="['/booking/past']" data-toggle="tab">Past</a>
                                     </li>
                                 </ul>
                             </div>
@@ -31,36 +31,32 @@
                 <div class="tab-content m-t-none">
                     <div class="tab-pane active" id="forthcoming">
                         <div class="booking-detail">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <property-info-cmp *ngIf="bookingService.booking && enquiryService.enquiry"
-                                                       [data]="bookingService.booking"
-                                                       [propertyId]="enquiryService.enquiry.Enquiry.PropertyId"></property-info-cmp>
-                                    <payment-status-cmp *ngIf="bookingService.booking"
-                                                        [data]="bookingService.booking.Payments"></payment-status-cmp>
-                                </div>
-                                <div class="col-md-6">
-                                    <proposal-cmp *ngIf="enquiryService.enquiry" [data]="enquiryService.enquiry"></proposal-cmp>
-                                    <div class="enquiry-footer p-l-r-30">
-                                        <div class="row">
-                                            <div class="col-xs-6">
-                                                <button type="button" class="btn btn-danger font-16 m-l-10" (click)="cancelBooking()">Cancel booking</button>
-                                            </div>
-                                            <div class="col-xs-6" *ngIf="!loginService.getRoles('Agent')">
-                                                <button type="submit" class="btn btn-success pull-right font-16 m-r-10" (click)="saveBooking()">Save</button>
+                            <form [formGroup]="bookingForm">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <property-info-cmp *ngIf="bookingService.booking && enquiryService.enquiry"
+                                                           [data]="bookingService.booking"
+                                                           [group]="bookingForm"
+                                                           [propertyId]="enquiryService.enquiry.Enquiry.PropertyId"></property-info-cmp>
+                                        <payment-status-cmp *ngIf="bookingService.booking"
+                                                            [data]="bookingService.booking.Payments"></payment-status-cmp>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <proposal-cmp *ngIf="enquiryService.enquiry" [data]="enquiryService.enquiry"></proposal-cmp>
+                                        <div class="enquiry-footer p-l-r-30">
+                                            <div class="row">
+                                                <div class="col-xs-6">
+                                                    <button type="button" class="btn btn-danger font-16 m-l-10" (click)="cancelBooking()">Cancel booking</button>
+                                                </div>
+                                                <div class="col-xs-6" *ngIf="!loginService.getRoles('Agent')">
+                                                    <button type="submit" class="btn btn-success pull-right font-16 m-r-10" (click)="saveBooking()">Save</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
-                    </div>
-                    <div class="tab-pane" id="current">
-                    </div>
-                    <div class="tab-pane" id="past">
-
-                    </div>
-                    <div class="tab-pane" id="forthcoming-details">
                     </div>
                 </div>
             </div>
