--- a/app/components/booking/payment-status/payment-status.component.html
+++ b/app/components/booking/payment-status/payment-status.component.html
@@ -18,7 +18,8 @@
                             (data[i - 1] && data[i - 1].Complete && !item.Complete && !loginService.getRoles(item.RoleResponsible))"
                      class="status-date pull-right">Pending</div>
 
-                <button *ngIf="(loginService.getRoles(item.RoleResponsible) && data[i - 1] && data[i - 1].Complete) || (loginService.getRoles(item.RoleResponsible) && !data[i - 1])"
+                <button *ngIf="(loginService.getRoles(item.RoleResponsible) && data[i - 1] && data[i - 1].Complete && !item.Complete) ||
+                               (loginService.getRoles(item.RoleResponsible) && !data[i - 1] && !item.Complete)"
                         (click)="confirmStatus(item.TransactionId)"
                         class="btn btn-success-green font-14 pull-right">Confirm</button>
             </div>
