--- a/app/components/booking/property-info/property-info.component.html
+++ b/app/components/booking/property-info/property-info.component.html
@@ -18,6 +18,7 @@
             </div>
         </div>
         <div class="villa-container left">
+            <div class="enquiry-status accepted">{{ data.Status}}</div>
             <h4 class="enquiry-title">{{propertiesService.property.Name}}</h4>
             <p class="location"><i class="material-icons">place</i> {{propertiesService.property.Region.Name}}</p>
         </div>
