fixed Layuot issue with the dashboard

--- a/app/components/villa/villa.component.html
+++ b/app/components/villa/villa.component.html
@@ -2,7 +2,7 @@
 <div class="card card-product">
     <div class="card-image" data-header-animation="true">
         <a href="javascript:;">
-            <img class="img" src="{{ villa.ImageId ? 'http://res.cloudinary.com/privadia/image/upload/c_fill,h_280,w_430/c_fill,q_80/' + villa.ImageId + '.jpg' : '../assets/img/image_placeholder.jpg' }}">
+            <img class="img" src="{{ villa.ImageId ? 'http://res.cloudinary.com/privadia/image/upload/c_fill,h_280,w_430/c_fill,q_80/' + villa.ImageId + '.jpg' : '../assets/img/image_placeholder.png' }}">
         </a>
     </div>
     <div class="card-content">
