--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -702,6 +702,43 @@ div.dataTables_wrapper div.dataTables_paginate {
 }
 
 /**
+ * Popover
+ */
+
+.pop-over-content {
+	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4) !important;
+	border-radius: 4px;
+	padding: 12px;
+}
+
+.pop-over-content:before {
+	content: ' ';
+	position: absolute;
+	border-top: 15px solid transparent;
+	border-left: 15px solid #e4e4e4;
+	border-right: 0px solid #e4e4e4;
+	border-bottom: 15px solid transparent;
+	top: 50%;
+	right: -15px;
+}
+
+.pop-over-content:after {
+	content: ' ';
+	position: absolute;
+	border-top: 14px solid transparent;
+	border-left: 14px solid #ffffff;
+	border-right: 0px solid #ffffff;
+	border-bottom: 14px solid transparent;
+	top: 50%;
+	right: -14px;
+}
+
+.pop-over-content h3 {
+	font-size: 18px;
+	text-align: center;
+}
+
+/**
  *	Wizard form
  */
 .wizard-card .tab-content {
