--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -704,40 +704,42 @@ div.dataTables_wrapper div.dataTables_paginate {
 /**
  * Popover
  */
-
-.pop-over-content {
-	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4) !important;
+.popover {
 	border-radius: 4px;
+}
+
+.popover .popover-content {
 	padding: 12px;
 }
 
-.pop-over-content:before {
-	content: ' ';
-	position: absolute;
-	border-top: 15px solid transparent;
-	border-left: 15px solid #e4e4e4;
-	border-right: 0px solid #e4e4e4;
-	border-bottom: 15px solid transparent;
-	top: 50%;
-	right: -15px;
-}
-
-.pop-over-content:after {
-	content: ' ';
-	position: absolute;
-	border-top: 14px solid transparent;
-	border-left: 14px solid #ffffff;
-	border-right: 0px solid #ffffff;
-	border-bottom: 14px solid transparent;
-	top: 50%;
-	right: -14px;
-}
-
-.pop-over-content h3 {
+.popover .popover-content h3 {
 	font-size: 18px;
 	text-align: center;
 }
 
+.popover .popover-content .btn {
+	border-radius: 4px !important;
+	min-width: 120px !important;
+	text-transform: uppercase !important;
+	padding: 12px 15px !important;
+}
+
+.popover .popover-content .btn.btn-danger:hover,
+.popover .popover-content .btn.btn-danger:active,
+.popover .popover-content .btn.btn-danger:focus,
+.popover .popover-content .btn.btn-danger:focus:active,
+.popover .popover-content .btn.btn-danger:active:hover {
+	background-color: #f44336;
+}
+
+.popover .popover-content .btn.btn-success-green:hover,
+.popover .popover-content .btn.btn-success-green:active,
+.popover .popover-content .btn.btn-success-green:focus,
+.popover .popover-content .btn.btn-success-green:focus:active,
+.popover .popover-content .btn.btn-success-green:active:hover {
+	background-color: #09907e;
+	box-shadow: 0px 7px 12px 0 rgba(0, 191, 165, 0.4);
+}
 /**
  *	Wizard form
  */
