Closing meta filter panel

--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -40,7 +40,7 @@
                                 [regions]="dashboardService.regions"
                                 [group]="filterForm.controls.Regions"></select-field-cmp>
                     </div>
-                    <button class="btn btn-white btn-round btn-fab btn-just-icon" type="button" data-toggle="collapse" data-target="#extend-filter">
+                    <button id="openFilter" class="btn btn-white btn-round btn-fab btn-just-icon" type="button" data-toggle="collapse" data-target="#extend-filter">
                         <i class="material-icons">more_vert</i>
                     </button>
                 </div>
