View Enquiry (manger)

--- a/app/components/enquiry/proposal/proposal.component.html
+++ b/app/components/enquiry/proposal/proposal.component.html
@@ -7,7 +7,7 @@
         </div>
         <div *ngIf="!data.Enquiry.Proposal && !data.Enquiry.DeclinedAt && !data.Enquiry.CancelledAt" class="row">
             <div class="col-xs-12 text-center">
-                <p>You have no proposal created for this Enquiry yet</p>
+                <p>You have not created a proposal for this enquiry yet</p>
             </div>
         </div>
         <div *ngIf="data.Enquiry.DeclinedAt" class="row">
