--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -706,7 +706,7 @@ div.dataTables_wrapper div.dataTables_paginate {
  */
 .popover {
 	border-radius: 4px;
-	max-width: 100%;
+	max-width: 9999px;
 }
 
 .popover.left>.arrow {
