--- a/app/pages/properties/setrates/setrates.component.html
+++ b/app/pages/properties/setrates/setrates.component.html
@@ -112,17 +112,9 @@
                                             <button class="btn btn-simple btn-delete btn-icon"
                                                     type="button"
                                                     *ngIf="isEdit[i]"
-                                                    [popover]="clearRatePopover">
+                                                    (click)="clearRates({rate: rate, index: i})">
                                                 <i class="material-icons text-danger">clear</i>
                                             </button>
-                                            <popover-content #clearRatePopover
-                                                             placement="left"
-                                                             [animation]="true"
-                                                             [closeOnClickOutside]="true">
-                                                <h3>Are you sure?</h3>
-                                                <button type="button" class="btn btn-danger font-14" (click)="clearRates({rate: rate, index: i})">Yes, remove</button>
-                                                <button type="button" class="btn btn-success-green font-14" (click)="clearRatePopover.hide($event)">Cancel</button>
-                                            </popover-content>
                                             <popover-content #deleteRatePopover
                                                              placement="left"
                                                              [animation]="true"
